TestCases/Errors/threaded_movement/observations/sum_12_obs.spm
 obs   9-11   0.03 
 obs   10-11   0.0228333333333333 
 obs   11-11   0.0115731225296443 
 obs   12-11   0.0116264090177134 
 obs   11-12   0.0117391304347826 
 obs   12-12   0.012695652173913 
 obs   6-16   0.00551144094001237 
 obs   7-16   0.00904761904761905 
 obs   7-17   0.00476190476190476 
 error_value   9-11   0 
 error_value   10-11   0 
 error_value   11-11   0 
 error_value   12-11   0 
 error_value   11-12   0 
 error_value   12-12   0 
 error_value   6-16   0 
 error_value   7-16   0 
 error_value   7-17   0 
